--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.15.4"
+  },
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
-    "seed": "node ./bin/seeds.js"
+    "seed": "node ./bin/seeds.js",
+    "build-react": "echo ---- creating react build --- && cd ../client  && npm install && npm run build && cp -r ./build/* ../server/public/ && cd .."
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -21,6 +25,6 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "uploader": "0.0.3-3"
+    "uploader": "0.0.3"
   }
 }
